--- a/css/main.css
+++ b/css/main.css
@@ -1186,8 +1186,8 @@ table {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  max-width: none;
-  margin: 0 3%; }
+  max-width: 65rem;
+  margin: 0 auto; }
   @media screen and (max-width: 768px) {
     .container--burgers {
       -webkit-box-pack: center;
@@ -1227,13 +1227,16 @@ table {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
   @media screen and (max-width: 768px) {
     .slider {
       width: 89%; } }
 
 .slider__list {
-  height: 55%; }
+  height: 100%; }
   @media screen and (max-width: 768px) {
     .slider__list {
       height: 100%; } }
@@ -1244,7 +1247,7 @@ table {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  padding-top: 5%;
+  padding-top: 1%;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
@@ -1254,40 +1257,46 @@ table {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
-      padding-top: 13%;
       -webkit-box-pack: center;
       -ms-flex-pack: center;
-      justify-content: center; } }
+      justify-content: center;
+      padding-top: 10%; } }
+  @media screen and (max-width: 480px) {
+    .slider__item {
+      padding-top: 25%; } }
 
 .ingredients {
+  position: absolute;
+  top: 10%;
+  left: 0%; }
+  .ingredients:hover .ingredients__dropdown {
+    opacity: 1;
+    z-index: 10; }
+  .ingredients:hover .ingredients__pic-wrap {
+    background: #e35028; }
+  @media screen and (max-width: 768px) {
+    .ingredients {
+      left: 13%;
+      top: 7%; } }
+  @media screen and (max-width: 480px) {
+    .ingredients {
+      left: -7%;
+      top: 2%; } }
+
+.ingredients__pic-wrap {
   width: 5.625rem;
   height: 5.625rem;
-  position: absolute;
-  top: 0;
-  left: 1%;
   background-color: #f08c33;
   border-radius: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
-  @media screen and (max-width: 768px) {
-    .ingredients {
-      left: 12%;
-      top: 3%; } }
-  @media screen and (max-width: 480px) {
-    .ingredients {
-      left: -7%;
-      top: 8%; } }
 
 .ingredients__pic {
   fill: white; }
@@ -1297,12 +1306,39 @@ table {
   font-size: 0.875rem;
   color: white; }
 
+.ingredients__dropdown {
+  width: 16.875rem;
+  height: 20.8125rem;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  padding-top: 15%;
+  padding-left: 15%;
+  opacity: 0;
+  -webkit-transition: .3s opacity;
+  -o-transition: .3s opacity;
+  transition: .3s opacity;
+  position: absolute;
+  top: 0;
+  left: 5.625rem;
+  z-index: -100; }
+
+.table__pic {
+  width: 4.5rem;
+  height: 3.125rem;
+  font-size: 0.875rem;
+  font-weight: 500; }
+
+.table__comp {
+  width: 7.75rem;
+  font-size: 0.875rem;
+  font-weight: 300; }
+
 .kkal {
   width: 3.75rem;
   height: 4.875rem;
   position: absolute;
-  bottom: 0;
-  left: 1%;
+  bottom: 8%;
+  left: 0%;
   opacity: 0.5;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1319,12 +1355,14 @@ table {
   justify-content: center; }
   @media screen and (max-width: 768px) {
     .kkal {
-      bottom: 87%;
-      left: 77%; } }
+      bottom: unset;
+      left: unset;
+      top: 8%;
+      right: 13%; } }
   @media screen and (max-width: 480px) {
     .kkal {
-      bottom: 83%;
-      left: 92%; } }
+      top: 2%;
+      right: -6%; } }
 
 .kkal__pic {
   fill: white; }
@@ -1340,24 +1378,22 @@ table {
   color: white; }
 
 .slider__pic-wrap {
-  padding-top: 3%;
-  width: 51%;
-  margin-right: 2%; }
+  width: 50%; }
   @media screen and (max-width: 768px) {
     .slider__pic-wrap {
       width: 75%;
-      margin-right: 0;
-      margin-bottom: 2%; } }
+      margin-bottom: 5%; } }
   @media screen and (max-width: 480px) {
     .slider__pic-wrap {
-      width: 100%;
-      margin-bottom: 1%; } }
+      width: 90%;
+      margin-bottom: 5%; } }
 
 .slider__pic {
+  max-width: 28.75rem;
   width: 100%; }
 
 .slider__desc {
-  width: 49%; }
+  width: 50%; }
   @media screen and (max-width: 768px) {
     .slider__desc {
       width: 100%;
@@ -1379,11 +1415,11 @@ table {
   margin-bottom: 10%; }
   @media screen and (max-width: 768px) {
     .slider__title {
-      width: 89%;
+      width: 84%;
       margin-bottom: 5%; } }
   @media screen and (max-width: 480px) {
     .slider__title {
-      width: 98%;
+      width: 90%;
       margin-bottom: 0%;
       font-size: 3.125rem;
       line-height: 1.1; } }
