--- a/scss/blocks/burgers.scss
+++ b/scss/blocks/burgers.scss
@@ -7,8 +7,8 @@
 .container--burgers {
     flex-direction: row;
     align-items: center;
-    max-width: none;
-    margin: 0 3%;
+    max-width: rem(1040px);
+    margin: 0 auto;
     
     @include tablets {
         justify-content: center;
@@ -40,6 +40,7 @@
     height: 90%;
     display: flex;
     align-items: center;
+    justify-content: center;
 
     @include tablets {
         width: 89%;
@@ -48,7 +49,7 @@
 }
 
 .slider__list {
-    height: 55%;
+    height: 100%;
 
     @include tablets {
         height: 100%;
@@ -59,38 +60,55 @@
     height: 100%;
     display: flex;
     position: relative;
-    padding-top: 5%;
+    padding-top: 1%;
     align-items: center;
 
     @include tablets {
         flex-direction: column;
-        padding-top: 13%;
         justify-content: center;
+        padding-top: 10%;
+    }
+    
+    @include phones {
+        padding-top: 25%;
+        
     }
 }
 
 .ingredients {
-    width: rem(90px);
-    height: rem(90px);
     position: absolute;
-    top: 0;
-    left: 1%;
-    background-color: #f08c33;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    top: 10%;
+    left: 0%;
+
+    &:hover .ingredients__dropdown {
+        opacity: 1;
+        z-index: 10;
+    }
+    
+    &:hover .ingredients__pic-wrap {
+        background: #e35028;
+    }
 
     @include tablets {
-        left: 12%;
-        top: 3%;
+        left: 13%;
+        top: 7%;
     }
 
     @include phones {
         left: -7%;
-        top: 8%;
+        top: 2%;
     }
+}
+
+.ingredients__pic-wrap {
+    width: rem(90px);
+    height: rem(90px);
+    background-color: #f08c33;
+    border-radius: 5px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+
 }
 
 .ingredients__pic {
@@ -103,12 +121,40 @@
     color: white;
 }
 
+.ingredients__dropdown {
+    width: rem(270px);
+    height: rem(333px);
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    padding-top: 15%;
+    padding-left: 15%;
+    opacity: 0;
+    transition: .3s opacity;
+    position: absolute;
+    top: 0;
+    left: rem(90px);
+    z-index: -100;
+}
+
+.table__pic {
+    width: rem(72px);
+    height: rem(50px);
+    font-size: rem(14px);
+    font-weight: 500;
+}
+
+.table__comp {
+    width: rem(124px);
+    font-size: rem(14px);
+    font-weight: 300;
+}
+
 .kkal {
     width: rem(60px);
     height: rem(78px);
     position: absolute;
-    bottom: 0;
-    left: 1%;
+    bottom: 8%;
+    left: 0%;
     opacity: 0.5;
     display: flex;
     flex-direction: column;
@@ -116,13 +162,15 @@
     justify-content: center;
 
     @include tablets {
-        bottom: 87%;
-        left: 77%;
+        bottom: unset;
+        left: unset;
+        top: 8%;
+        right: 13%;
     }
 
     @include phones {
-        bottom: 83%;
-        left: 92%;
+        top: 2%;
+        right: -6%;
     }
 }
 
@@ -143,28 +191,26 @@
 }
 
 .slider__pic-wrap {
-    padding-top: 3%;
-    width: 51%;
-    margin-right: 2%;
-
+    width: 50%;
+    
     @include tablets {
         width: 75%;
-        margin-right: 0;
-        margin-bottom: 2%;
+        margin-bottom: 5%;
     }
     
     @include phones {
-        width: 100%;
-        margin-bottom: 1%;
+        width: 90%;
+        margin-bottom: 5%;
     }
 }
 
 .slider__pic {
+    max-width: rem(460px);
     width: 100%;
 }
 
 .slider__desc {
-    width: 49%;
+    width: 50%;
     
     @include tablets {
         width: 100%;
@@ -181,12 +227,12 @@
     margin-bottom: 10%;
 
     @include tablets {
-        width: 89%;
+        width: 84%;
         margin-bottom: 5%;
     }
 
     @include phones {
-        width: 98%;
+        width: 90%;
         margin-bottom: 0%;
         font-size: rem(50px);
         line-height: 1.1;
