--- a/scss/blocks/menu.scss
+++ b/scss/blocks/menu.scss
@@ -39,7 +39,7 @@
     width: 0;
     overflow: hidden;
     height: 100%;
-    transition: width .6s;
+    transition: .6s width;
 }
 
 .h-accordeon__content-text {
