--- a/css/main.css
+++ b/css/main.css
@@ -371,8 +371,7 @@ table {
       margin-bottom: 2.8125rem; } }
 
 .best__item div {
-  text-align: center;
-  height: 7.5rem; }
+  text-align: center; }
   @media screen and (max-width: 480px) {
     .best__item div {
       text-align: left;
@@ -381,8 +380,8 @@ table {
         margin-right: 0; } }
 
 .best__item svg {
-  width: 97px;
-  height: 89px; }
+  width: 6.0625rem;
+  height: 5.5625rem; }
 
 .best__item h3 {
   font-family: "lifehack";
@@ -391,8 +390,7 @@ table {
   margin-bottom: 0.8125rem; }
   @media screen and (max-width: 480px) {
     .best__item h3 {
-      margin-bottom: 0.625rem;
-      white-space: nowrap; } }
+      margin-bottom: 0.625rem; } }
 
 .best__item p {
   margin: 0;
@@ -427,13 +425,25 @@ table {
 
 .team__content {
   width: 70%;
-  padding-left: 0.625rem; }
+  padding-left: 0.625rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  height: 80%; }
   @media screen and (max-width: 768px) {
     .team__content {
       text-align: center;
       -webkit-box-align: center;
       -ms-flex-align: center;
-      align-items: center; } }
+      align-items: center;
+      height: auto; } }
   @media screen and (max-width: 480px) {
     .team__content {
       width: 100%;
@@ -465,7 +475,11 @@ table {
   overflow: hidden;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  height: 0; }
+  height: 0;
+  opacity: 0;
+  -webkit-transition: height .5s;
+  -o-transition: height .5s;
+  transition: height .5s; }
   @media screen and (max-width: 768px) {
     .v-accordeon__content {
       -webkit-box-orient: vertical;
@@ -485,13 +499,29 @@ table {
     width: 0;
     height: 0;
     border: 6px solid transparent;
-    border-bottom-color: #f8b43a;
-    border-top-width: 0;
-    margin-right: 0.3125rem; }
+    border-top-color: #f8b43a;
+    border-bottom-width: 0;
+    margin-right: 0.3125rem;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg); }
 
 .v-accordeon__item--active .v-accordeon__content {
-  min-height: 7.8125rem;
-  height: auto; }
+  height: 30vh;
+  -webkit-animation: acco-content .3s linear forwards;
+  animation: acco-content .3s linear forwards; }
+
+@-webkit-keyframes acco-content {
+  75% {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes acco-content {
+  75% {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 .v-accordeon__name {
   display: -webkit-box;
@@ -512,7 +542,12 @@ table {
     border: 6px solid transparent;
     border-top-color: white;
     border-bottom-width: 0;
-    margin-right: 0.3125rem; }
+    margin-right: 0.3125rem;
+    -webkit-transition: -webkit-transform .5s;
+    transition: -webkit-transform .5s;
+    -o-transition: transform .5s;
+    transition: transform .5s;
+    transition: transform .5s, -webkit-transform .5s; }
   @media screen and (max-width: 768px) {
     .v-accordeon__name {
       -webkit-box-pack: center;
@@ -597,9 +632,9 @@ table {
   width: 0;
   overflow: hidden;
   height: 100%;
-  -webkit-transition: width .6s;
-  -o-transition: width .6s;
-  transition: width .6s; }
+  -webkit-transition: .6s width;
+  -o-transition: .6s width;
+  transition: .6s width; }
 
 .h-accordeon__content-text {
   color: #fff;
