--- a/scss/blocks/best.scss
+++ b/scss/blocks/best.scss
@@ -36,7 +36,7 @@
     @include phones {
         flex-direction: row;
         width: 100%;
-        margin-bottom: rem(45px);
+        margin-boёttom: rem(45px);
     }
 }
 
