--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -328,6 +328,10 @@ table {
       padding-left: 1.5625rem;
       margin-bottom: 1.25rem; } }
 
+@media screen and (max-width: 768px) {
+  .best__content {
+    height: 45%; } }
+
 .best__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -371,8 +375,7 @@ table {
       margin-bottom: 2.8125rem; } }
 
 .best__item div {
-  text-align: center;
-  height: 7.5rem; }
+  text-align: center; }
   @media screen and (max-width: 480px) {
     .best__item div {
       text-align: left;
@@ -381,8 +384,9 @@ table {
         margin-right: 0; } }
 
 .best__item svg {
-  width: 97px;
-  height: 89px; }
+  width: 6.0625rem;
+  height: 5.5625rem;
+  margin-bottom: 1.0625rem; }
 
 .best__item h3 {
   font-family: "lifehack";
@@ -391,8 +395,7 @@ table {
   margin-bottom: 0.8125rem; }
   @media screen and (max-width: 480px) {
     .best__item h3 {
-      margin-bottom: 0.625rem;
-      white-space: nowrap; } }
+      margin-bottom: 0.625rem; } }
 
 .best__item p {
   margin: 0;
@@ -427,13 +430,25 @@ table {
 
 .team__content {
   width: 70%;
-  padding-left: 0.625rem; }
+  padding-left: 0.625rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  height: 80%; }
   @media screen and (max-width: 768px) {
     .team__content {
       text-align: center;
       -webkit-box-align: center;
       -ms-flex-align: center;
-      align-items: center; } }
+      align-items: center;
+      height: auto; } }
   @media screen and (max-width: 480px) {
     .team__content {
       width: 100%;
@@ -465,7 +480,11 @@ table {
   overflow: hidden;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  height: 0; }
+  height: 0;
+  opacity: 0;
+  -webkit-transition: height .5s;
+  -o-transition: height .5s;
+  transition: height .5s; }
   @media screen and (max-width: 768px) {
     .v-accordeon__content {
       -webkit-box-orient: vertical;
@@ -485,13 +504,29 @@ table {
     width: 0;
     height: 0;
     border: 6px solid transparent;
-    border-bottom-color: #f8b43a;
-    border-top-width: 0;
-    margin-right: 0.3125rem; }
+    border-top-color: #f8b43a;
+    border-bottom-width: 0;
+    margin-right: 0.3125rem;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg); }
 
 .v-accordeon__item--active .v-accordeon__content {
-  min-height: 7.8125rem;
-  height: auto; }
+  height: 20vh;
+  -webkit-animation: acco-content .3s linear forwards;
+  animation: acco-content .3s linear forwards; }
+
+@-webkit-keyframes acco-content {
+  75% {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes acco-content {
+  75% {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 .v-accordeon__name {
   display: -webkit-box;
@@ -512,7 +547,12 @@ table {
     border: 6px solid transparent;
     border-top-color: white;
     border-bottom-width: 0;
-    margin-right: 0.3125rem; }
+    margin-right: 0.3125rem;
+    -webkit-transition: -webkit-transform .5s;
+    transition: -webkit-transform .5s;
+    -o-transition: transform .5s;
+    transition: transform .5s;
+    transition: transform .5s, -webkit-transform .5s; }
   @media screen and (max-width: 768px) {
     .v-accordeon__name {
       -webkit-box-pack: center;
@@ -591,15 +631,18 @@ table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%; }
+  height: 100%;
+  -webkit-transition: right .3s;
+  -o-transition: right .3s;
+  transition: right .3s; }
 
 .h-accordeon__content {
   width: 0;
   overflow: hidden;
   height: 100%;
-  -webkit-transition: width .6s;
-  -o-transition: width .6s;
-  transition: width .6s; }
+  -webkit-transition: .6s width;
+  -o-transition: .6s width;
+  transition: .6s width; }
 
 .h-accordeon__content-text {
   color: #fff;
@@ -719,7 +762,7 @@ table {
     -webkit-transition: 0.3;
     -o-transition: 0.3;
     transition: 0.3; }
-  .feedback__item:hover .feedback__content {
+  .feedback__item:hover .feedback__container {
     opacity: 1; }
   .feedback__item:hover:after {
     opacity: 0.6; }
@@ -728,14 +771,14 @@ table {
       width: 50%;
       height: 25%; } }
 
-.feedback__content {
+.feedback__container {
   position: absolute;
   top: 14%;
   left: 7%;
   opacity: 0;
   z-index: 10; }
   @media screen and (max-width: 768px) {
-    .feedback__content {
+    .feedback__container {
       text-align: center;
       left: 14%;
       width: 75%;
@@ -1197,10 +1240,22 @@ table {
   @media screen and (max-width: 480px) {
     .container--burgers {
       margin: 0 0;
-      width: 100%; } }
+      width: 100%;
+      position: relative; } }
 
 .left-block {
   padding-left: 10px; }
+  @media screen and (max-width: 480px) {
+    .left-block {
+      position: absolute;
+      top: 50%;
+      left: 0%; } }
+
+@media screen and (max-width: 480px) {
+  .right-block {
+    position: absolute;
+    top: 50%;
+    right: 0%; } }
 
 .arrow-right__pic {
   fill: white;
@@ -1220,8 +1275,15 @@ table {
   -ms-transform: rotate(90deg);
   transform: rotate(90deg); }
 
+.slider__container {
+  overflow: hidden;
+  height: 90%; }
+  @media screen and (max-width: 768px) {
+    .slider__container {
+      width: 100%; } }
+
 .slider {
-  height: 90%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1230,27 +1292,39 @@ table {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+  position: relative; }
   @media screen and (max-width: 768px) {
     .slider {
       width: 89%; } }
 
 .slider__list {
-  height: 100%; }
+  height: 100%;
+  width: 100%;
+  padding-top: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-transition: right .3s;
+  -o-transition: right .3s;
+  transition: right .3s; }
   @media screen and (max-width: 768px) {
     .slider__list {
       height: 100%; } }
 
 .slider__item {
   height: 100%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  padding-top: 1%;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%; }
   @media screen and (max-width: 768px) {
     .slider__item {
       -webkit-box-orient: vertical;
@@ -1259,11 +1333,7 @@ table {
       flex-direction: column;
       -webkit-box-pack: center;
       -ms-flex-pack: center;
-      justify-content: center;
-      padding-top: 10%; } }
-  @media screen and (max-width: 480px) {
-    .slider__item {
-      padding-top: 25%; } }
+      justify-content: center; } }
 
 .ingredients {
   position: absolute;
@@ -1276,11 +1346,11 @@ table {
     background: #e35028; }
   @media screen and (max-width: 768px) {
     .ingredients {
-      left: 13%;
-      top: 7%; } }
+      left: 14%;
+      top: 3%; } }
   @media screen and (max-width: 480px) {
     .ingredients {
-      left: -7%;
+      left: 2%;
       top: 2%; } }
 
 .ingredients__pic-wrap {
@@ -1359,12 +1429,12 @@ table {
     .kkal {
       bottom: unset;
       left: unset;
-      top: 8%;
-      right: 13%; } }
+      top: 4%;
+      right: 14%; } }
   @media screen and (max-width: 480px) {
     .kkal {
-      top: 2%;
-      right: -6%; } }
+      top: 4%;
+      right: 2%; } }
 
 .kkal__pic {
   fill: white; }
@@ -1451,7 +1521,7 @@ table {
       width: 54%; } }
   @media screen and (max-width: 480px) {
     .slider__order {
-      width: 73%;
+      width: 85%;
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center; } }
@@ -1460,7 +1530,8 @@ table {
   font-family: 'gagalin';
   font-size: 1.875rem;
   color: #e25028;
-  margin-right: 3.5%; }
+  margin-right: 3.5%;
+  line-height: 1; }
   @media screen and (max-width: 480px) {
     .price {
       font-size: 1.5rem; } }
@@ -1473,3 +1544,63 @@ table {
   @media screen and (max-width: 480px) {
     .price__number {
       font-size: 3.125rem; } }
+
+.overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rgba(47, 50, 52, 0.93);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.overlay__container {
+  width: 460px;
+  height: 255px;
+  display: block;
+  background-color: #fff;
+  border-radius: 5px;
+  padding-left: 15px;
+  padding-top: 28px;
+  padding-right: 23px;
+  position: relative; }
+
+.overlay__name {
+  font-family: 'gagalin';
+  font-size: 14px;
+  margin-bottom: 25px; }
+
+.overlay__text {
+  font-weight: 300;
+  font-size: 14px; }
+
+.overlay__close:before, .overlay__close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 29px;
+  width: 4px;
+  display: block;
+  background-color: #ec8468; }
+
+.overlay__close {
+  position: absolute;
+  top: 7%;
+  right: 10%;
+  cursor: pointer; }
+  .overlay__close:before {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg); }
+  .overlay__close:after {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
