--- a/scss/blocks/burgers.scss
+++ b/scss/blocks/burgers.scss
@@ -9,7 +9,7 @@
     align-items: center;
     max-width: rem(1040px);
     margin: 0 auto;
-    
+        
     @include tablets {
         justify-content: center;
         margin: 0 2%;
@@ -18,11 +18,26 @@
     @include phones {
         margin: 0 0;
         width: 100%;
+        position: relative;
     }
 }
 
 .left-block {
     padding-left: 10px;
+
+    @include phones {
+        position: absolute;
+        top: 50%;
+        left: 0%;
+    }
+}
+
+.right-block {
+    @include phones {
+        position: absolute;
+        top: 50%;
+        right: 0%;
+    }
 }
 
 .arrow-right__pic {
@@ -36,11 +51,22 @@
     transform-origin: center;
     transform: rotate(90deg);
 }
-.slider {
+
+.slider__container {
+    overflow: hidden;
     height: 90%;
+
+    @include tablets {
+        width: 100%;
+    }
+}
+
+.slider {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 
     @include tablets {
         width: 89%;
@@ -50,6 +76,11 @@
 
 .slider__list {
     height: 100%;
+    width: 100%;
+    padding-top: 1%;
+    display: flex;
+    position: relative;
+    transition: right .3s;
 
     @include tablets {
         height: 100%;
@@ -58,19 +89,18 @@
 
 .slider__item {
     height: 100%;
+    width: 100%;
     display: flex;
     position: relative;
-    padding-top: 1%;
     align-items: center;
+    flex-basis: 100%;
 
     @include tablets {
         flex-direction: column;
         justify-content: center;
-        padding-top: 10%;
     }
     
     @include phones {
-        padding-top: 25%;
         
     }
 }
@@ -90,12 +120,12 @@
     }
 
     @include tablets {
-        left: 13%;
-        top: 7%;
+        left: 14%;
+        top: 3%;
     }
 
     @include phones {
-        left: -7%;
+        left: 2%;
         top: 2%;
     }
 }
@@ -167,13 +197,13 @@
     @include tablets {
         bottom: unset;
         left: unset;
-        top: 8%;
-        right: 13%;
+        top: 4%;
+        right: 14%;
     }
 
     @include phones {
-        top: 2%;
-        right: -6%;
+        top: 4%;
+        right: 2%;
     }
 }
 
@@ -267,7 +297,7 @@
     }
 
     @include phones {
-        width: 73%;
+        width: 85%;
         align-items: center;
     }
 }
@@ -277,6 +307,7 @@
     font-size: rem(30px);
     color: $orange;
     margin-right: 3.5%;
+    line-height: 1;
 
     @include phones {
         font-size: rem(24px);
