--- a/scss/blocks/overlay.scss
+++ b/scss/blocks/overlay.scss
@@ -1,9 +1,7 @@
 .overlay {
-    height: 100%;
-    width: 100%;
     display: flex;
     background-color: rgba($color: #2f3234, $alpha: .93);
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -12,7 +10,7 @@
     justify-content: center;
 }
 
-.overlay__content {
+.overlay__container {
     width: 460px;
     height: 255px;
     display: block;
@@ -21,6 +19,7 @@
     padding-left: 15px;
     padding-top: 28px;
     padding-right: 23px;
+    position: relative;
 }
 
 .overlay__name {
