--- a/scss/blocks/menu.scss
+++ b/scss/blocks/menu.scss
@@ -33,7 +33,8 @@
 .h-accordeon__item {
     display: flex;
     height: 100%;
-    transition: right .3s;
+    right: 0;
+    transition: .2s right;
 }
 
 .h-accordeon__content {
@@ -55,19 +56,59 @@
     transition: .2s opacity;
 
     @include phones {
-        font-size: rem(12px);
-        padding-left: rem(10px);
-        padding-top: rem(10px);
+        font-size: rem(14px);
+        padding-left: rem(35px);
+        padding-top: rem(60px);
+        padding-right: rem(40px);
     }
 }
 
+.close-menu:before, .close-menu:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 29px;
+    width: 4px;
+    display: block;
+    background-color: #fff;
+}
+
+.close-menu {
+    display: none;
+    position: absolute;
+    top: 3.5%;
+    right: 12%;
+    cursor: pointer;
+    &:before {
+        transform: rotate(45deg);
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+    }
+
+}
+
 .h-accordeon__item--active .h-accordeon__content {
-    width: calc(100vw/2);
+    width: 50vw;
+
+    // @include phones {
+    //     position: absolute;
+    //     right: 0;
+    //     z-index: 20;
+    // }
 }
 
 .h-accordeon__item--active .h-accordeon__content-text {
     animation: text-appear .8s linear forwards;
 }
+
+.h-accordeon__item--active .close-menu {
+    @include phones {
+        display: block;
+    }
+}
+
 
 @keyframes text-appear  {
     75% {opacity: 0};
@@ -104,7 +145,7 @@
     }
 
     @include phones {
-        width: 2.75rem;
+        width: 80px;
     }
 }
 
@@ -121,6 +162,10 @@
     top: 100%;
     margin-top: -20px;
     z-index: 10;
+
+    @include phones {
+        top: 95%;
+    }
 }
 
 
