--- a/scss/blocks/burgers.scss
+++ b/scss/blocks/burgers.scss
@@ -29,6 +29,7 @@
         position: absolute;
         top: 50%;
         left: 0%;
+        z-index: 100;
     }
 }
 
@@ -37,6 +38,7 @@
         position: absolute;
         top: 50%;
         right: 0%;
+        z-index: 100;
     }
 }
 
@@ -57,7 +59,7 @@
     height: 90%;
 
     @include tablets {
-        width: 100%;
+        height: 100%;
     }
 }
 
@@ -77,7 +79,6 @@
 .slider__list {
     height: 100%;
     width: 100%;
-    padding-top: 1%;
     display: flex;
     position: relative;
     transition: right .3s;
@@ -164,11 +165,17 @@
     top: 0;
     left: rem(90px);
     z-index: -100;
+
+    @include tablets {
+        width: 320px;
+    }
 }
 
 .table__pic {
     width: rem(72px);
     height: rem(50px);
+    
+
 }
 
 .table__comp {
