--- a/scss/blocks/aside-pagination.scss
+++ b/scss/blocks/aside-pagination.scss
@@ -24,7 +24,11 @@
         content: '';
         @include circle(8px, #fff);
     }
-    &:hover:after {
+    
+}
+
+.pagination__link--active {
+    &:after {
         content: '';
         display: block;
         position: absolute;
