--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -78,15 +78,14 @@ table {
 
 .wrapper {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: relative;
   overflow: hidden; }
 
 .main-content {
   position: absolute;
   width: 100%;
-  height: 100%;
-  min-height: 650px;
+  min-height: 100%;
   top: 0;
   -webkit-transition: .3s top;
   -o-transition: .3s top;
