--- a/scss/blocks/map.scss
+++ b/scss/blocks/map.scss
@@ -1,4 +1,4 @@
 .map {
-    background: url(../img/map_section/map-bg.jpg) center center / cover no-repeat;
+    //background: url(../img/map_section/map-bg.jpg) center center / cover no-repeat;
     position: relative;
 }
