--- a/dev/scss/blocks/overlay.scss
+++ b/dev/scss/blocks/overlay.scss
@@ -21,6 +21,10 @@
     padding-right: 23px;
     padding-bottom: 15px;
     position: relative;
+
+    @include tablets {
+        width: 95%;
+    }
 }
 
 .overlay__name {
