--- a/dev/scss/blocks/burgers.scss
+++ b/dev/scss/blocks/burgers.scss
@@ -54,7 +54,7 @@
     transform: rotate(90deg);
 }
 
-.slider__container {
+.slider {
     overflow: hidden;
     height: 90%;
 
@@ -63,7 +63,7 @@
     }
 }
 
-.slider {
+.slider__container {
     height: 100%;
     display: flex;
     align-items: center;
@@ -111,11 +111,14 @@
     top: 10%;
     left: 0%;
     z-index: 100;
+    
 
     &:hover .ingredients__dropdown {
         @include desktops {
             opacity: 1;
-            z-index: 10;
+            z-index: 100;
+            left: rem(90px);
+            
         }
     }
     
@@ -173,11 +176,12 @@
     transition: .3s opacity;
     position: absolute;
     top: 0;
-    left: rem(90px);
+    left: -99999px;
     z-index: -100;
 
     @include tablets {
         width: 320px;
+        left: rem(90px);        
     }
 
     @include tablets2 {
