--- a/dev/scss/blocks/hello.scss
+++ b/dev/scss/blocks/hello.scss
@@ -75,7 +75,7 @@
     }
 }
 
-.slogan__text {
+.hello-block__slogan-text {
     font-size: rem(65px);
     font-family: "lifehack";
     color: #fff;
